--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,18 +2,18 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-}
-
-
-
-.containert {
+  }
+  
+  
+  
+  .containert {
     position: relative;
     width: 100%;
     display: grid;
     
-}
-
-.centered {
+  }
+  
+  .centered {
     display: flex;
     position: absolute;
     top: 50%;
@@ -25,23 +25,59 @@
     padding: 30px;
     justify-content: center;
     align-items: center;
-
-}
-img{
+  
+  }
+  img{
     width: 100%;
     height: 300px;
     object-fit: cover;
-}
-
-.contasking{
+  }
+   
+  .contasking{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-left: 40px;
-    margin-right: 40px;
-}
-
-.sort-contan{
+    margin-top: 20px !important;
+    margin-bottom: 20px !important;
+    width: 84%;
+    margin: auto;
+  }
+   
+  .card {
+    margin-bottom: 41px;
+    height: 90%;
+    width: 100% !important;
+  }
+  .card img {
+    width: 100%;
+    height: 200px;
+  } 
+  .contasking h1 {
+    font-size: 20px;
+    font-weight: 600;
+  }
+  
+  .sort-contan{
     display: flex;
     align-items: center;
-}
+  }
+  .sort-contan span {
+    margin-right: 10px;
+  }
+   
+   
+  /* ================== Responsive CSS =================== */
+  @media (min-width: 768px) and (max-width: 991.98px) {
+    .container{
+        max-width: 800px !important;
+        margin: auto;
+       } 
+       .contasking {
+        margin-right: 110px;
+      }
+       .contasking {
+        width: 78%;
+      }
+  }
+  
+  
