--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,83 +1,93 @@
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-  }
-  
-  
-  
-  .containert {
-    position: relative;
-    width: 100%;
-    display: grid;
-    
-  }
-  
-  .centered {
-    display: flex;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-    background: rgb(0, 0, 0); /* Fallback color */
-    background: rgba(0, 0, 0, 0.5); /* Black background with 0.5 opacity */
-    padding: 30px;
-    justify-content: center;
-    align-items: center;
-  
-  }
-  img{
-    width: 100%;
-    height: 300px;
-    object-fit: cover;
-  }
-   
-  .contasking{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 20px !important;
-    margin-bottom: 20px !important;
-    width: 84%;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+
+
+.containert {
+  position: relative;
+  width: 100%;
+  display: grid;
+
+}
+
+.centered {
+  display: flex;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  background: rgb(0, 0, 0);
+  /* Fallback color */
+  background: rgba(0, 0, 0, 0.5);
+  /* Black background with 0.5 opacity */
+  padding: 30px;
+  justify-content: center;
+  align-items: center;
+
+}
+
+img {
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+}
+
+.contasking {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 20px !important;
+  margin-bottom: 20px !important;
+  width: 84%;
+  margin: auto;
+}
+
+.card {
+  margin-bottom: 41px;
+  height: 90%;
+  width: 100%;
+}
+
+.card img {
+  width: 100%;
+  height: 200px;
+}
+
+.card .increase-importance, .sortButton {
+  cursor: pointer;
+}
+
+.contasking h1 {
+  font-size: 20px;
+  font-weight: 600;
+}
+
+.sort-contan {
+  display: flex;
+  align-items: center;
+}
+
+.sort-contan span {
+  margin-right: 10px;
+}
+
+
+/* ================== Responsive CSS =================== */
+@media (min-width: 768px) and (max-width: 991.98px) {
+  .container {
+    max-width: 800px !important;
     margin: auto;
   }
-   
-  .card {
-    margin-bottom: 41px;
-    height: 90%;
-    width: 100% !important;
+
+  .contasking {
+    margin-right: 110px;
   }
-  .card img {
-    width: 100%;
-    height: 200px;
-  } 
-  .contasking h1 {
-    font-size: 20px;
-    font-weight: 600;
+
+  .contasking {
+    width: 78%;
   }
-  
-  .sort-contan{
-    display: flex;
-    align-items: center;
-  }
-  .sort-contan span {
-    margin-right: 10px;
-  }
-   
-   
-  /* ================== Responsive CSS =================== */
-  @media (min-width: 768px) and (max-width: 991.98px) {
-    .container{
-        max-width: 800px !important;
-        margin: auto;
-       } 
-       .contasking {
-        margin-right: 110px;
-      }
-       .contasking {
-        width: 78%;
-      }
-  }
-  
-  
+}
